Added .gitignore, .gitattributes & .editorconfig + cleanup & collapsed lil funcs into biguns.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-#, My .gitignore
+# ========================================
+#&             .gitignore
+# ========================================
+#, Specifies intentionally untracked files to ignore
+
 _notes/
+*.code-workspace
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
