Refactored deck creation & consolidated code - breaking out constants & logging funcs. Added linting, formatting & LSP.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 # ========================================
 #, Specifies intentionally untracked files to ignore
 
-_notes/
+#% Ignore all files or folders with underscore as prefix.
+_*
 *.code-workspace
 
 # =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -25,7 +26,7 @@ _notes/
 #. Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-#. Dependency directories (remove the comment below to include it)
+#. Dependency directories
 vendor/
 
 #. Go workspace file
