--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -12,6 +12,17 @@
 #| - output
 #| - issues
 
+# @ CONCLUSION
+# ***************************************************************************
+# ***************************************************************************
+# *
+# *   EVAL: MISSING = WSL
+# *     CUDDLING complaints
+# *     block should not end with a whitespace (or comment)
+# *
+# ***************************************************************************
+# ***************************************************************************
+
 #========================================
 run:  #%  Options for analysis running.
 #========================================
@@ -425,7 +436,7 @@ linters-settings:
           - validate
 
   goimports:
-    # local-prefixes: github.com/spf13/viper
+    local-prefixes: github.com/spf13/viper
 
 #. depguard - Checks if package imports are in a list of acceptable packages.
   depguard:
@@ -450,6 +461,53 @@ linters-settings:
       - all
     #   - '-SA1000' # disable the rule SA1000
     #   - '-SA1004' # disable the rule SA1004
+
+  #. I'm biased and I'm enabling more than 100 checks.. Might be too much for you.
+  #= See https://go-critic.com/overview.html
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - experimental
+      - opinionated
+      - performance
+      - style
+    disabled-checks:
+      #. These 3 will detect many cases, but they do sense if it's performance oriented code
+      - hugeParam
+      - rangeExprCopy
+      - rangeValCopy
+
+  godot:
+    scope: all
+
+  errcheck:
+    check-type-assertions: true #. Report `a := b.(MyStruct)` when `a, ok := ...` should be. - Default: false
+    check-blank: true           #. Report skipped checks:`num, _ := strconv.Atoi(numStr)`. - Default: false
+    #. Functions to skip.
+    exclude-functions:
+      - io/ioutil.ReadFile
+      - io.Copy(*bytes.Buffer)
+      - io.Copy(os.Stdout)
+
+  govet:
+    disable:
+      - fieldalignment #. I'm ok to waste some bytes
+
+  nakedret:
+    #. No naked returns, ever.
+    max-func-lines: 1 #. Default: 30
+
+  tagliatelle:
+    case:
+      rules:
+        json: snake #. why it's not a `snake` by default?!
+        yaml: snake #. why it's not a `snake` by default?!
+        xml: camel
+        bson: camel
+        avro: snake
+        mapstructure: kebab
+
+#= See also https://gist.github.com/cristaloleg/dc29ca0ef2fb554de28d94c3c6f6dc88
 
 #=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 #&          Revive - Linter Settings
@@ -640,8 +698,8 @@ linters-settings:
         disabled: false
         arguments:
           - "^[a-z][a-z0-9]{0,}$"
-      #= https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#imports-blacklist
-      - name: imports-blacklist
+      #= https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#imports-blocklist
+      - name: imports-blocklist
         severity: warning
         disabled: false
       #= https://github.com/mgechev/revive/blob/master/RULES_DESCRIPTIONS.md#import-shadowing
@@ -790,52 +848,8 @@ linters-settings:
         severity: warning
         disabled: false
 
-  #. I'm biased and I'm enabling more than 100 checks.. Might be too much for you.
-  #= See https://go-critic.com/overview.html
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - experimental
-      - opinionated
-      - performance
-      - style
-    disabled-checks:
-      #. These 3 will detect many cases, but they do sense if it's performance oriented code
-      - hugeParam
-      - rangeExprCopy
-      - rangeValCopy
 
-  godot:
-    scope: all
 
-  errcheck:
-    check-type-assertions: true #. Report `a := b.(MyStruct)` when `a, ok := ...` should be. - Default: false
-    check-blank: true           #. Report skipped checks:`num, _ := strconv.Atoi(numStr)`. - Default: false
-    #. Functions to skip.
-    exclude-functions:
-      - io/ioutil.ReadFile
-      - io.Copy(*bytes.Buffer)
-      - io.Copy(os.Stdout)
-
-  govet:
-    disable:
-      - fieldalignment #. I'm ok to waste some bytes
-
-  nakedret:
-    #. No naked returns, ever.
-    max-func-lines: 1 #. Default: 30
-
-  tagliatelle:
-    case:
-      rules:
-        json: snake #. why it's not a `snake` by default?!
-        yaml: snake #. why it's not a `snake` by default?!
-        xml: camel
-        bson: camel
-        avro: snake
-        mapstructure: kebab
-
-#= See also https://gist.github.com/cristaloleg/dc29ca0ef2fb554de28d94c3c6f6dc88
 
 #=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 #&          Issues
@@ -851,7 +865,7 @@ issues:
     # - "Error return value of .((os\\.)?std(out|err)\\..*|.*Close|.*Flush|os\\.Remove(All)?|.*printf?|os\\.(Un)?Setenv). is not checked"
     # - "exported (type|method|function) (.+) should have comment or be unexported"
     # - "ST1000: at least one file in a package should have a package comment"
-        "File is not properly formatted" #? gofmt, gofumpt, goimports, gci - All complained, no cause found, auto-fixes temporary [if effective - returns on edit.] Suspect Line endings or similar (lf vs crlf?)
+    - "File is not properly formatted" #? gofmt, gofumpt, goimports, gci - All complained, no cause found, auto-fixes temporary [if effective - returns on edit.] Suspect Line endings or similar (lf vs crlf?)
 
   exclude-rules:    #. Exclude some linters from running on tests files.
     - path: _test\.go
@@ -865,6 +879,14 @@ issues:
     - path-except: _test\.go
       linters:
         - forbidigo
+
+#* Omitted due to the above:
+#* logging.go:9:3     forbidigo         use of `fmt.Print` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
+#* logging.go:24:3    forbidigo         use of `fmt.Println` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
+#* logging.go:29:6    forbidigo         use of `fmt.Print` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
+#* logging.go:32:6    forbidigo         use of `fmt.Print` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
+#* main.go:8:2        forbidigo         use of `fmt.Printf` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
+#* main.go:15:3       forbidigo         use of `fmt.Println` forbidden by pattern `^(fmt\.Print(|f|ln)|print|println)$`
 
     #. Exclude known linters from partially hard-vendored code, which is impossible to exclude via `nolint` comments.
     #| `/` will be replaced by current OS file path separator to properly work on Windows.
@@ -885,6 +907,9 @@ issues:
 
   exclude-case-sensitive: false         #. If set to true, `exclude` and `exclude-rules` regular expressions become case-sensitive. - Default: false
 
+
+
+
   #. Which dirs to exclude: issues from them won't be reported. - Default dirs are skipped independently of this option's value (see exclude-dirs-use-default).
   #~ Can use regexp here: `generated.*`, regexp is applied on full path, including the path prefix if one is set.
   #| "/" will be replaced by current OS file path separator to properly work on Windows.
@@ -901,12 +926,25 @@ issues:
   #. There is no need to include all autogenerated files, we confidently recognize autogenerated files.
   #| "/" will be replaced by current OS file path separator to properly work on Windows.
   # Default: []
+
+# **********************************************************************************************
+# **********************************************************************************************
+# **********************************************************************************************
+
   exclude-files:
     - ".*\\_notes\\.*$"     #. ANY files in _notes dir
     - ".*\\_notes\\.go$"    #. .go files in _notes dir
-    - ".*\\..*$"            #. dotfiles in project root
+    - ".*\\\\..*$"          #? dotfiles in project root  [carefull - foobar it to useless..]
     - ".*\\_.*$"            #. underscore prefixed files in project root
     - lib/bad.go
+
+# **********************************************************************************************
+# **********************************************************************************************
+# **********************************************************************************************
+
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
 
   #. Mode of the generated files analysis.
   #
@@ -1024,6 +1062,12 @@ issues:
     - EXC0014
     - EXC0015
 
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+#&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&
+
+
+
 #=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 #&      Output Configuration Options
 #=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -1099,3 +1143,55 @@ output:
   #, Show statistics per linter. {# of matches}
   # Default: false
   show-stats: false
+
+# **************** 48 ********************
+#. >golangci-lint.exe run -c .\.golangci.yaml
+#, constants.go:21:1  decorder          multiple "var" declarations are not allowed; use parentheses instead
+#, constants.go:34:1  decorder          type must not be placed after const (desired order: type,const,var,func)
+#, constants.go:51:1  decorder          type must not be placed after const (desired order: type,const,var,func)
+#, constants.go:51:1  decorder          multiple "type" declarations are not allowed; use parentheses instead
+#, cards.go:11:8      exhaustruct       main.card is missing fields suitedName, noSuitName, suitPlural, suitSingle, rankPip, suitPip, suitPipUC, suitRank, rankInSuit
+#, main.go:12:8       exhaustruct       main.player is missing fields name, hand, handScore, handDesc, wins, losses
+#, cards.go:1:1       gci               File is not properly formatted
+#, cards.go:58:1      gci               File is not properly formatted
+#, constants.go:11:2  gochecknoglobals  names is a global variable
+#, constants.go:12:2  gochecknoglobals  rankBySuit is a global variable
+#, constants.go:13:2  gochecknoglobals  suitedNames is a global variable
+#, constants.go:21:5  gochecknoglobals  glyphRef is a global variable
+#, cards.go:1:1       gofmt             File is not properly formatted
+#, constants.go:1:1   gofmt             File is not properly formatted
+#, logging.go:1:1     gofmt             File is not properly formatted
+#, main.go:1:1        gofmt             File is not properly formatted
+#, cards.go:1:1       gofumpt           File is not properly formatted
+#, cards.go:58:1      gofumpt           File is not properly formatted
+#, constants.go:1:1   gofumpt           File is not properly formatted
+#, constants.go:59:1  gofumpt           File is not properly formatted
+#, logging.go:1:1     gofumpt           File is not properly formatted
+#, logging.go:41:1    gofumpt           File is not properly formatted
+#, main.go:1:1        gofumpt           File is not properly formatted
+#, main.go:31:1       gofumpt           File is not properly formatted
+#, cards.go:1:1       goimports         File is not properly formatted
+#, constants.go:1:1   goimports         File is not properly formatted
+#, logging.go:1:1     goimports         File is not properly formatted
+#, main.go:1:1        goimports         File is not properly formatted
+#, cards.go:39:23     gosec             G404: Use of weak random number generator (math/rand or math/rand/v2 instead of crypto/rand)
+#, logging.go:25:3    intrange          for loop can be changed to use an integer range (Go 1.22+)
+#, main.go:11:2       intrange          for loop can be changed to use an integer range (Go 1.22+)
+#, cards.go:35:2      nlreturn          return with no blank line before
+#, cards.go:41:2      nlreturn          return with no blank line before
+#, cards.go:48:2      nlreturn          return with no blank line before
+#, cards.go:57:2      nlreturn          return with no blank line before
+#, logging.go:40:2    nlreturn          return with no blank line before
+#, cards.go:1:1       revive            package-comments: should have a package comment
+#, cards.go:31:3      revive            modifies-parameter: parameter 'theDeck' seems to be modified
+#, cards.go:40:2      revive            modifies-parameter: parameter 'theDeck' seems to be modified
+#, cards.go:45:10     revive            var-declaration: should omit type int from declaration of var idx; it will be inferred from the right-hand side
+#, cards.go:47:2      revive            modifies-parameter: parameter 'theDeck' seems to be modified
+#, cards.go:45:10     stylecheck        ST1023: should omit type int from declaration; it will be inferred from the right-hand side
+#, constants.go:11:2  unused            var `names` is unused
+#, constants.go:53:2  unused            field `name` is unused
+#, constants.go:55:2  unused            field `handScore` is unused
+#, constants.go:56:2  unused            field `handDesc` is unused
+#, constants.go:57:2  unused            field `wins` is unused
+#, constants.go:58:2  unused            field `losses` is unused
+#, 🕱
